# TenshiTranslator

./: .buildinfo  .coverage  .coveragerc  .gitignore  Backend.py  BatchTranslator.py  Constants.py  EnglishFileOutput.py  EnglishOnlyFormat.py  FileOutput.py  FileTranslator.py  Glossary.py  Keyboard.py  LineByLineFileOutput.py  LineByLineFormat.py  Main.py  Mouse.py  Names.csv  Names.py  OfflineTranslator.py  OnlineTranslator.py  README.md  TextProcessor.py  Timing.py  TranslationCorrection.csv  Translator.py  api.py  coverage.xml  genindex.html  index.html  main.py  objects.inv  offlineTranslator.py  onlineTranslator.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  (+3 more)
.github/: .codecov.yml
App/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Backend/: BatchTranslator.py  LineByLineFormat.py  OfflineTranslator.py  OutputFormat.py  Translator.py  api.py
TenshiTranslator/: Backend.py  TenshiTranslatorCLI.py  TenshiTranslatorGUI.py  api.py
Widget/: BatchSizeSlider.py  CSVFileSelector.py  DirectorySelector.py  FileDragDrop.py  FileFrame.py  MainApplication.py  OutputFormatSelector.py  Terminal.py  TickSlider.py  TimeoutSlider.py  TranslatorSelector.py
_sources/: index.rst.txt
apidoc/: TenshiTranslator.Backend.html  TenshiTranslator.OutputFormat.EnglishOnlyFormat.html  TenshiTranslator.OutputFormat.LineByLineFormat.html  TenshiTranslator.OutputFormat.OutputFormat.html  TenshiTranslator.OutputFormat.html  TenshiTranslator.Translator.BatchTranslator.html  TenshiTranslator.Translator.OfflineTranslator.html  TenshiTranslator.Translator.OnlineTranslator.html  TenshiTranslator.Translator.Translator.html  TenshiTranslator.Translator.html  TenshiTranslator.Util.Glossary.html  TenshiTranslator.Util.TextProcessor.html  TenshiTranslator.api.html  TenshiTranslator.html  modules.html
apidocs/: TenshiTranslator.Glossary.CSVGlossary.html  TenshiTranslator.Glossary.Glossary.html  TenshiTranslator.Glossary.PassthroughGlossary.html  TenshiTranslator.Glossary.html  TenshiTranslator.OutputFormat.EnglishOnlyFormat.html  TenshiTranslator.OutputFormat.LineByLineFormat.html  TenshiTranslator.OutputFormat.OutputFormat.html  TenshiTranslator.OutputFormat.html  TenshiTranslator.TenshiTranslatorGUI.html  TenshiTranslator.Translator.BatchTranslator.html  TenshiTranslator.Translator.OfflineTranslator.html  TenshiTranslator.Translator.OnlineTranslator.html  TenshiTranslator.Translator.Translator.html  TenshiTranslator.Translator.html  TenshiTranslator.UI.BatchSizeSlider.html  TenshiTranslator.UI.CSVFileSelector.html  TenshiTranslator.UI.DirectorySelector.html  TenshiTranslator.UI.FileDragDrop.html  (+14 more)
(+110 files in other folders)
