[project]
name = "TenshiTranslator"
version = "0.0.1"
authors = [
  { name="Ryan Liao", email="ryan.liao0305@gmail.com" },
]
description = "Novel Translation Utility using Sugoi Translator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Ryan4253/TenshiTranslator"
Issues = "https://github.com/Ryan4253/TenshiTranslator/issues"

[build-system]
requires = ["hatchling", "requests", "selenium", "chromedriver-autoinstaller", "Flask"]
build-backend = "hatchling.build"